# hot_cold_identify_test

./: .gitignore  CMakeLists.txt  README.md
src/: main_executor.cpp
test_data/: test_case_01.txt  test_case_02.txt  test_case_03.txt  test_case_04.txt
